# stats507-coursework

./: .gitignore  README.md  file_translator.py  gui_app.py  main.py  pyproject.toml  requirements.txt
model/: __init__.py  model.py  prompt.py
util/: __init__.py  file.py  latex.py
